upload with list id
